<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="et_hint">Name</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Jane">%s</xliff:g>   </string>
    <string name="add_whipped_cream">Add whipped cream?</string>
    <string name="add_chocolate">Add chocolate?</string>
    <string name="summary_quantity">Quantity:
     <xliff:g id="quantity" example="2">%d</xliff:g> </string>
    <string name="summary_total">Total: <xliff:g id="dollar">$</xliff:g></string>
    <string name="summary_thank_you">Thank You!</string>
    <string name="order_summary_email_subject">Just Java order for
        <xliff:g id="name" example="Amy">%s</xliff:g> </string>

    <string name="toast_max_coffees">You can not have more than 100 coffees.</string>
    <string name="toast_min_coffees">You can not have less than 1 coffee.</string>
</resources>
