<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@mipmap/back2"
        >

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginBottom="16dp"
            android:hint="@string/et_hint"
            android:inputType="textCapWords"
            />

        <TextView
            android:id="@+id/tv_toppings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/toppings"
            android:textAllCaps="true"
            />

        <CheckBox
            android:id="@+id/cb_whipped_cream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whipped_cream"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:paddingLeft="15dp"
            android:textColor="@color/colorPrimaryDark"
            />

        <CheckBox
            android:id="@+id/cb_chocolate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:paddingLeft="15dp"
            android:textColor="@color/colorPrimaryDark"
            />

        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/quantity"
            android:textAllCaps="true" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/bt_minus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:onClick="decrement"
                android:text="@string/minus"
                android:textColor="@android:color/black"
                />
            <TextView
                android:id="@+id/tv_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />


            <Button
                android:id="@+id/bt_plus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:onClick="increment"
                android:text="@string/plus"
                android:textColor="@android:color/black"
                />

        </LinearLayout>


        <Button
            android:id="@+id/bt_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            />


    </LinearLayout>
</ScrollView>